# ocpi-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  module-implementation.yml
.github/workflows/: auto-merge-gate.yml  ci.yml  codeql.yml  guardrails.yml  scorecard.yml  security.yml
crates/ocpi-cli/: Cargo.toml
crates/ocpi-cli/src/: main.rs
crates/ocpi-client/: Cargo.toml
crates/ocpi-client/src/: error.rs  lib.rs
crates/ocpi-server/: Cargo.toml
crates/ocpi-server/src/: lib.rs
crates/ocpi-types/: Cargo.toml
crates/ocpi-types/src/: common.rs  envelope.rs  error.rs  lib.rs  status.rs  transport.rs  v2_1_1.rs  v2_2_1.rs  v2_3_0.rs  version.rs
nightly/: JOURNAL.md  LEARNINGS.md  PLAYBOOK.md
scripts/: fetch-specs.sh  guardrails.sh
specs/: NOTICE.md
specs/ocpi/2.0/: README.md
specs/ocpi/2.1.1/: SOURCE.txt
specs/ocpi/2.2/: SOURCE.txt
specs/ocpi/2.2.1/: SOURCE.txt
specs/ocpi/2.3.0/: SOURCE.txt
specs/ocpi/3.0/: README.md
