[package]
name = "ocpi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tools for OCPI: list a party's versions and validate response envelopes."
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ocpi"
path = "src/main.rs"

[dependencies]
ocpi-types.workspace = true
ocpi-client.workspace = true
clap.workspace = true
tokio.workspace = true
url.workspace = true
serde_json.workspace = true
